--- a/static/css/style.css
+++ b/static/css/style.css
@@ -199,3 +199,15 @@ nav{
     margin-top:0px;
 }
 
+.notification {
+    font-weight: 300;
+    font-size: 0.8rem;
+    color: #fff !important;
+    background-color: #F9A825 !important;
+    border-radius: 2px;
+    margin-top: 20px;
+}
+
+.btn-notification {
+    background-color: #F9A825;
+}
