--- a/static/css/style.css
+++ b/static/css/style.css
@@ -203,3 +203,11 @@ nav{
 .create_articel{
     margin:10px;
 }
+
+#share-buttons img {
+    width: 35px;
+    padding: 5px;
+    border: 0;
+    box-shadow: 0;
+    display: inline;
+    }
