add like buttons on comments

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -370,6 +370,10 @@ nav{
     color:teal;
 }
 
+#thumb-up-like-comment,#thumb-down-dislike{
+    color:teal;
+}
+
 .targeted-icons #icons{
     color:teal;
 }
