--- a/static/css/style1.css
+++ b/static/css/style1.css
@@ -224,3 +224,6 @@ h2 {
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: teal;
 }
+.pagination li.active {
+	background-color: teal;
+}
